<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apktool</string>
    <string name="click_once_more">Press back once more to exit!</string>
    <string name="all_files_saved">All files saved!</string>

    <string name="jks">Keystore(JKS)</string>
    <string name="pkcs12">Keystore(PKCS12)</string>
    <string name="bks">Keystore(BKS)</string>
    <string name="pk8">pk8+x509.pem</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="close_cur">Close</string>
    <string name="close_others">Close Others</string>
    <string name="close_all">Close All</string>

    <string name="go_back">Back to parent directory</string>
    <string name="sort">Sort Method</string>
    <string name="new_file">New File</string>
    <string name="new_dir">New Directory</string>
	<string name="main_project">Set As Main Project</string>
	<string name="smali_snalysis">Smali Analysis</string>
	<string name="smali_snalysis_desc">Smali Analysis Channel</string>

	<string name="errors">Errors</string>
	<string name="files">Files</string>
	<string name="apps">Applications</string>
	<string name="apps_installed">Installed Applications</string>
	<string name="apps_system">System Applications</string>
	<string name="details">Details</string>

    <string name="text">%1$s</string>
    <string name="setting">Settings</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="edit_mode">Edit mode</string>
    <string name="scan_mode">Navigate mode</string>
    <string name="translate_java">Translate to Java</string>
    <string name="return_smali">Go back to Smali</string>
    <string name="format">Align code</string>
    <string name="find">Search</string>
    <string name="go_to_line">Go to line</string>
	<string name="save_file">Save file</string>
	<string name="save_file_msg">There are some files not save, save them?</string>
    <string name="settings">Settings</string>
    <string name="decompile_all">Decompile all</string>
    <string name="decompile_res">Decompile resources</string>
    <string name="decompile_dex">Decompile classes.dex</string>
    <string name="install">Install</string>
    <string name="verify">Verify signature</string>
    <string name="translate">Translate</string>
    <string name="import_framework">Import as framework</string>
    <string name="sign">Sign</string> 
    <string name="rename">Rename</string> 
    <string name="delete">Delete</string>
    <string name="copy_path">Copy Path</string> 
    <string name="build_copy_file">Copying ‘%1$s’...</string>
	<string name="jaxp_not_support">"JAXP 1.5 Support is required to validate XML"</string>
	<string name="report_error">"Please report this application to Apktool for a fix: https://github.com/iBotPeaches/Apktool/issues/1728"</string>
	<string name="decoding_shared_library">"Decoding Shared Library \(%1$s\), pkgId: %2$d"</string>
	<string name="unknown_skip_bytes">"Unknown data detected. Skipping: %d byte\(s\)"</string>
	<string name="using_apktool">"Using Apktool %1$s on %2$s"</string>
    <string name="build_run_title">Compiling...</string>
    <string name="sign_done">The signature is complete and the output file is ‘%1$s’.</string>
    <string name="verify_v1_success">V1 signature verification succeeded.</string>
    <string name="verify_v1_fail">V1 signature verification failed.</string>
    <string name="verify_v2_success">V2 signature verification succeeded.</string>
    <string name="verify_v2_fail">V2 signature verification failed.</string>
    <string name="decode_run_title">Decompiling...</string>
    <string name="sign_run_title">Signing...</string>
    <string name="verify_run_title">Verifying signature...</string>
	<string name="light_theme">Light Theme</string>
	<string name="light_theme_summary">Choose between a light theme and a dark theme for the user interface.</string>
	<string name="output_directory">Output Directory</string>
	<string name="set_as_output_directory">Set As Output Directory</string>
	<string name="output_directory_summary">Set the output directory of installed apps.</string>
	<string name="output_directory_not_extsts">Output directory \'%1$s\' not exists and can not be created!</string>
	<string name="output_directory_not_set">You must set output directory first!</string>
	<string name="not_directory">\'%1$s\' not a directory!</string>

    <string name="application">Application</string>
    <string name="application_summary">Configure global application settings.</string>
    <string name="editor">Editor</string>
    <string name="editor_summary">Configure the editor.</string>
    <string name="signature">Signature</string>
    <string name="signature_summary">Configure signature settings.</string>
    <string name="build_and_decode">Build &amp; Decode</string>
    <string name="build_and_decode_summary">Configure Build &amp; Decode settings.</string>
    <string name="font_size">Editor font size</string>
    <string name="font_size_summary">Specify the default font size of the editor.</string>
    <string name="font_size_title">Editor font size:</string>
    <string name="debug_mode">Set apk as debugable</string>
    <string name="debug_mode_summary">"Sets android:debuggable to \"true\" in the APK's compiled manifest"</string>
    <string name="verbose_mode">Verbose</string>
    <string name="verbose_mode_summary">Enable verbose mode.</string>
    <string name="copyOriginalFiles">Match original</string>
    <string name="copyOriginalFiles_summary">Keeps files to closest to original as possible. Prevents rebuild.</string>
    <string name="mBakdeb">Write debug info</string>
    <string name="mBakdeb_summary">"Write out debug info (.local, .param, .line, etc.)"</string>
    <string name="custom_signature_file">Custom signature file</string>
    <string name="custom_signature_file_summary">Use Custom signature file.</string>
    <string name="signature_file">Signturae file</string>
    <string name="signature_file_summary">The setting file (pk8 file or keystore file). If it is a pk8 file, will automatically generate an x509.pem file with the same name (for example, testkey.pk8 corresponds to testkey.x509.pem).</string>
    <string name="signature_file_missing">Signature file \'%1$s\' not found, using default signature!</string>
	<string name="load_signature_file_fail">Unable to load signature file \'%1$s\'.</string>
	<string name="enter_password">Enter password:</string>
	<string name="about">About</string>

    <string name="key_type">Key Type:</string>
    <string name="key_path">Key Path:</string>
    <string name="cert_path">Cert Path:</string>
    <string name="key_alias">Alias:</string>
    <string name="store_pass">Keystore Password:</string>
    <string name="key_pass">Private Key Password:</string>

    <string name="verify_cert_count">Number of signatures: %d。</string>
    <string name="verify_success">Successful verification.</string>
    <string name="verify_fail">Verification failed.</string>
    <string name="verify_log_cert">%1$s Unique distinguished name: %2$s。</string>
    <string name="verify_log_keySize">%1$s Key size (bits): %2$s。</string>
    <string name="verify_log_key_algorithm">%1$s Key algorithm: %2$s。</string>
    <string name="verify_jar">JAR signer %1$s: %2$s</string>
    <string name="date">Vilidity Date:</string>
    <string name="common_name">Common Name:</string>
    <string name="organization_unit">Organization Unit@</string>
    <string name="organization_name">Organization Name:</string>
    <string name="locality_name">Locality Name:</string>
    <string name="state_name">State Name:</string>
    <string name="country">Country@</string>
    <string name="gen_key_title">Create a key file</string>
    <string name="gen_key_summary">Touch to create a key file.</string>
    <string name="analysis_all_smali">Analysis all smali</string>
    <string name="analysis_all_smali_summary">Analysis All smali file when launch and set main project.</string>
    <string name="create_and_use">Create and use</string>
</resources>
