<?xml version='1.0' encoding='utf-8'?>
<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/key_type"/>
			<Spinner
				android:entries="@array/format"
				android:id="@+id/format"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/key_path"/>
			<EditText
				android:id="@+id/path"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView
					android:textAppearance="?android:textAppearanceSmall"
					android:id="@+id/cert"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/key_alias"/>
			</LinearLayout>
			<EditText
				android:id="@+id/alias"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
			<LinearLayout
				android:orientation="vertical"
				android:id="@+id/password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:textAppearance="?android:textAppearanceSmall"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/store_pass"/>
				<EditText
					android:id="@+id/storePass"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:inputType="textPassword"/>
				<TextView
					android:textAppearance="?android:textAppearanceSmall"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/key_pass"/>
				<EditText
					android:id="@+id/keyPass"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:inputType="textPassword"/>
			</LinearLayout>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="密钥大小："/>
			<EditText
				android:id="@+id/keySize"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="2048"
				android:ems="10"
				android:singleLine="true"
				android:inputType="number"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/date"/>
			<EditText
				android:id="@+id/date"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"
				android:inputType="number"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/common_name"/>
			<EditText
				android:id="@+id/name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/organization_unit"/>
			<EditText
				android:id="@+id/organizationUnit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/organization_name"/>
			<EditText
				android:id="@+id/organizationName"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/locality_name"/>
			<EditText
				android:id="@+id/localityName"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/state_name"/>
			<EditText
				android:id="@+id/stateName"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
			<TextView
				android:textAppearance="?android:textAppearanceSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/country"/>
			<EditText
				android:id="@+id/country"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:singleLine="true"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
