<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:textAppearance="?android:textAppearanceSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/key_type"/>

	<Spinner
		android:entries="@array/format"
		android:id="@+id/format"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:textAppearance="?android:textAppearanceSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/key_path"/>

	<EditText
		android:id="@+id/key_path"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:ems="10"/>

	<TextView
		android:textAppearance="?android:textAppearanceSmall"
		android:id="@+id/cert"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/key_alias"/>

	<EditText
		android:id="@+id/alias"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:ems="10"/>

	<include
		layout="@layout/password"/>

</LinearLayout>

